[project]
name = "AlienVaultAnywhere"
version = "36.0"
description = "AlienVault USM Anywhere delivers powerful threat detection, incident response, and compliance management for cloud, on-premises, and hybrid environments."
requires-python = ">=3.11,<3.12"
dependencies = [
 "pyopenssl==25.3.0",
 "pyopenssl==25.3.0", "arrow==1.3.0", "environmentcommon", "httpx==0.27.2", "requests==2.32.4", "tipcommon",]

[dependency-groups]
dev = [
 "environmentcommon",
 "pytest>=9.0.3",
 "pytest-json-report>=1.5.0",
 "soar-sdk",
 "tipcommon",
]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
tipcommon = { path = "../../../../packages/tipcommon/whls/TIPCommon-1.1.9.0-py2.py3-none-any.whl" }
environmentcommon = { path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.3-py3-none-any.whl" }
