# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "AlienVaultAppliance"
version = "28.0"
description = "USM Appliance includes the essential security capabilities and continuously delivered threat intelligence needed to quickly and easily identify and respond to threats in your physical and virtual infrastructure."
requires-python = ">=3.11,<3.12"
dependencies = [ "arrow>=1.4.0", "bs4>=0.0.2", "dateparser==1.2.0", "pytest-mock>=3.15.1", "pytz==2024.1", "requests==2.32.5", "simplejson==3.19.2",]

[dependency-groups]
dev = [
 "environmentcommon",
 "integration-testing",
 "pytest>=9.0.3",
 "pytest-json-report>=1.5.0",
 "soar-sdk",
 "tipcommon",
]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
integration-testing = { path = "../../../../packages/integration_testing_whls/integration_testing-2.3.8-py3-none-any.whl" }

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"

[tool.uv.sources.environmentcommon]
path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.3-py3-none-any.whl"

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-2.3.8-py3-none-any.whl"
