[project]
name = "Arcsight"
version = "46.0"
description = "Real-time threat detection and automated response backed by a powerful, open, and intelligent SIEM (Security Information and Event Management)."
requires-python = ">=3.11,<3.12"
dependencies = [ "environmentcommon", "netaddr==1.3.0", "requests==2.32.4", "simplejson==3.19.2", "tipcommon",]

[dependency-groups]
dev = [
 "environmentcommon",
 "pytest>=9.0.3",
 "pytest-json-report>=1.5.0",
 "soar-sdk",
 "tipcommon",
]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
tipcommon = { path = "../../../../packages/tipcommon/whls/TIPCommon-1.0.16-py2.py3-none-any.whl" }
environmentcommon = { path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.2-py2.py3-none-any.whl" }
