[project]
name = "Office365ManagementAPI"
version = "11.0"
description = "The Office 365 Management APIs provide a single extensibility platform for all Office 365 customers' and partners' management tasks, including service communications, security, compliance, reporting, and auditing."
requires-python = ">=3.11,<3.12"
dependencies = [ "environmentcommon", "pyjwt==2.9.0", "pyopenssl>=25.0.0", "requests==2.32.4", "tipcommon",]

[dependency-groups]
dev = [
 "environmentcommon",
 "pytest>=9.0.3",
 "pytest-json-report>=1.5.0",
 "soar-sdk",
 "tipcommon",
]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
tipcommon = { path = "../../../../packages/tipcommon/whls/TIPCommon-1.0.12-py2.py3-none-any.whl" }
environmentcommon = { path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.1-py2.py3-none-any.whl" }
