[project]
name = "SCCM"
version = "22.0"
description = "System Center Configuration Manager (SCCM) is a systems management software product developed by Microsoft for managing large groups of computers running Windows NT, Windows Embedded, macOS (OS X), Linux or UNIX, as well as Windows Phone, Symbian, iOS, and Android mobile operating systems. Configuration Manager provides remote control, patch management, software distribution, operating system deployment, network access protection and hardware, and software inventory. Users that will be specified in the integration configuration should be a member of the SMS admins group."
requires-python = ">=3.11,<3.12"
dependencies = [
 "pyopenssl==25.3.0",
 "pyopenssl==25.3.0", "pypika>=0.51.1", "tipcommon", "wmi-client-wrapper-py3==2023.1", "future",]

[dependency-groups]
dev = [
 "environmentcommon",
 "pytest>=9.0.3",
 "pytest-json-report>=1.5.0",
 "soar-sdk",
 "tipcommon",
]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
tipcommon = { path = "../../../../packages/tipcommon/whls/TIPCommon-1.0.10-py3-none-any.whl" }
environmentcommon = { path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.3-py3-none-any.whl" }
