[project]
name = "Twilio-Integration"
version = "16.0"
description = "Twilio provides a link between the internet and telecom networks. Use Twilio for voice and messaging features"
requires-python = ">=3.11,<3.12"
dependencies = [
 "pyopenssl==25.3.0",
 "pyopenssl==25.3.0",
    "twilio==9.2.4", "pytest-mock>=3.15.1",]

[dependency-groups]
dev = [
 "environmentcommon",
 "pytest>=9.0.3",
 "pytest-json-report>=1.5.0",
 "soar-sdk",
 "tipcommon",
]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
tipcommon = { path = "../../../../packages/tipcommon/whls/TIPCommon-1.0.12-py2.py3-none-any.whl" }
environmentcommon = { path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.3-py3-none-any.whl" }
