[project]
name = "Zabbix"
version = "17.0"
description = "Zabbix is an enterprise open source monitoring software for networks and applications.\r\nIt is designed to monitor and track the status of various network services, servers, and other network hardware."
requires-python = ">=3.11,<3.12"
dependencies = [
 "pyopenssl==25.3.0",
 "pyopenssl==25.3.0",
 "pytest-mock>=3.15.1",
 "pyzabbix==1.3.1",
]

[dependency-groups]
dev = [
 "environmentcommon",
 "pytest>=9.0.3",
 "pytest-json-report>=1.5.0",
 "soar-sdk",
 "tipcommon",
]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
tipcommon = { path = "../../../../packages/tipcommon/whls/TIPCommon-1.0.12-py2.py3-none-any.whl" }
environmentcommon = { path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.3-py3-none-any.whl" }
